# vue-audio-visualizer

./: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.worklet.json  vue.config.js
src/: App.vue  _window.worklet  app.ts  audio-worklet.d.ts  event-bus.ts  main.ts  panel-type.ts  polyfills.ts  settings.ts  shims-worklet.d.ts  uid.ts  visualizer.ts  window-function.ts  window-node.ts  window.worklet.ts
src/assets/: _mixins.sass  carbon-red.theme.sass  theme.sass
src/assets/colormaps/: magma.json
src/components/: PanelGrid.vue  PanelGridPanel.vue  PanelSelectVisualizer.vue  PanelSettingsAudio.vue  PanelSettingsVisual.vue  PanelVisualizer.vue  Sidebar.vue  SidebarAction.vue  TabSettings.vue  TabVisuals.vue
wasm-fft/: .gitignore  Cargo.toml
wasm-fft/src/: lib.rs
