[package]
name = "wasm-fft"
version = "0.1.0"
authors = ["ColinTimBarndt <colin.barndt@gmail.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
rustfft = "5.0.1"
js-sys = ">=0.3"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]